--- a/gui/package.json
+++ b/gui/package.json
@@ -1,15 +1,19 @@
 {
     "name": "velvet-gui",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "scripts": {
-        "dev": "tauri dev",
-        "build": "tauri build"
+        "dev": "npm run watch:css && tauri dev",
+        "build": "npm run build:css && tauri build",
+        "build:css": "tailwindcss -i ./src/styles.css -o ./src-tauri/dist/styles.css --minify",
+        "watch:css": "tailwindcss -i ./src/styles.css -o ./src-tauri/dist/styles.css --watch"
     },
     "dependencies": {
         "@tauri-apps/api": "^1.6.0",
         "tailwindcss": "^3.4.7"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^1.6.0"
+        "@tauri-apps/cli": "^1.6.0",
+        "postcss": "^8.4.31",
+        "autoprefixer": "^10.4.16"
     }
 }
