--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "velvet-core"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 [dependencies]
@@ -9,4 +9,6 @@ pest_derive = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.38", features = ["full"] }
-regex = "1.10"  # Added for stdlib string functions
+reqwest = { version = "0.11", features = ["blocking"] } # Added for http module
+rand = "0.8" # Added for random module
+sha2 = "0.10" # Added for crypto module
