--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "velvet-core"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 
 [dependencies]
@@ -9,6 +9,16 @@ pest_derive = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.38", features = ["full"] }
-reqwest = { version = "0.11", features = ["blocking"] } # Added for http module
-rand = "0.8" # Added for random module
-sha2 = "0.10" # Added for crypto module
+reqwest = { version = "0.11", features = ["blocking"] }
+rand = "0.8"
+sha2 = "0.10"
+serde_yaml = "0.9" # Added for yaml
+image = "0.24" # Added for image
+rusttype = "0.9" # Added for barcode/pdf
+rusqlite = "0.29" # Added for sqlite
+chrono = "0.4" # Added for dateutil
+geo = "0.26" # Added for geo
+qrcode = "0.12" # Added for qr
+rodio = "0.17" # Added for sound
+uuid = "1.8" # Added for uuid
+regex = "1.10" # Added for re
