--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -32,7 +32,12 @@ sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 clap = "4.4"
 tch = "0.10"
 bitcoin = "0.29"
-pdf-writer = "0.10" # Added for pdf module
+pdf-writer = "0.10"
+flate2 = "1.0"           # Added for compression
+jsonwebtoken = "8.3"      # Added for JWT
+serde_cbor = "0.11"       # Added for CBOR serialization
+hyper = "0.14"            # Added for advanced HTTP
+rbatis = "4.0"            # Added for ORM
 
 [lib]
 name = "velvet_core"
