--- a/gui/package.json
+++ b/gui/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "velvet-gui",
-    "version": "0.3.0",
-    "scripts": {
-        "dev": "npm run watch:css && tauri dev",
-        "build": "npm run build:css && tauri build",
-        "build:css": "tailwindcss -i ./src/styles.css -o ./src-tauri/dist/styles.css --minify",
-        "watch:css": "tailwindcss -i ./src/styles.css -o ./src-tauri/dist/styles.css --watch"
-    },
-    "dependencies": {
-        "@tauri-apps/api": "^1.6.0",
-        "tailwindcss": "^3.4.7"
-    },
-    "devDependencies": {
-        "@tauri-apps/cli": "^1.6.0",
-        "postcss": "^8.4.31",
-        "autoprefixer": "^10.4.16"
-    }
+  "name": "velvet-gui",
+  "version": "0.5.3",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "tauri": "tauri"
+  },
+  "dependencies": {
+    "@tauri-apps/api": "^1.5.6",
+    "axios": "^1.6.8", // Added for js_axios
+    "lodash": "^4.17.21" // Added for utility functions
+  },
+  "devDependencies": {
+    "vite": "^5.2.0",
+    "@tauri-apps/cli": "^1.5.14"
+  }
 }
