--- a/velvet-jni/pom.xml
+++ b/velvet-jni/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.velvet</groupId>
     <artifactId>velvet-jni</artifactId>
-    <version>0.5.2</version>
+    <version>0.5.3</version>
 
     <dependencies>
         <dependency>
@@ -31,17 +31,22 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-            <version>2.7.2</version> <!-- Added for Jython -->
+            <version>2.7.2</version>
         </dependency>
         <dependency>
             <groupId>com.github.jnr</groupId>
             <artifactId>jnr-ffi</artifactId>
-            <version>2.2.11</version> <!-- Added for C++ interop -->
+            <version>2.2.11</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.14.0</version> <!-- Added for JSON processing -->
+            <version>2.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
         </dependency>
     </dependencies>
 
