--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,45 +1,15 @@
 [package]
 name = "velvet-core"
-version = "0.5.3"
+version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pest = "2.7"
-pest_derive = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.38", features = ["full"] }
-reqwest = { version = "0.11", features = ["blocking"] }
-rand = "0.8"
-sha2 = "0.10"
-serde_yaml = "0.9"
-image = "0.24"
-rusttype = "0.9"
-rusqlite = "0.29"
+uuid = { version = "1.3", features = ["v4"] }
 chrono = "0.4"
-geo = "0.26"
-qrcode = "0.12"
-rodio = "0.17"
-uuid = "1.8"
-regex = "1.10"
-jni = "0.21"
-rustls = "0.21"
-imap = "2.4"
-ftp = "3.0"
-lettre = "0.10"
-ping = "0.4"
-sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
-clap = "4.4"
-tch = "0.10"
-bitcoin = "0.29"
-pdf-writer = "0.10"
-flate2 = "1.0"           # For rust_flate2
-jsonwebtoken = "8.3"      # For JWT support
-serde_cbor = "0.11"       # For CBOR serialization
-hyper = { version = "0.14", features = ["client", "http1"] } # For advanced HTTP
-rbatis = "4.0"            # For ORM
-
-[lib]
-name = "velvet_core"
-path = "src/lib.rs"
-crate-type = ["cdylib"]
+rayon = "1.7"
+rusqlite = { version = "0.29", features = ["bundled"] }
+websocket = "0.26"
+log = "0.4"
+env_logger = "0.10"
