--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "velvet-core"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -13,3 +13,5 @@ rusqlite = { version = "0.29", features = ["bundled"] }
 websocket = "0.26"
 log = "0.4"
 env_logger = "0.10"
+tokio = { version = "1.0", features = ["full"] }
+regex = "1.7"
